# reading_app_web

./: .gitignore  AGENTS.md  Cargo.toml  Trunk.toml  dprint.json  index.html  justfile  readme.md
assets/: sw.js
config/: development.toml
scripts/: build.sh  clean.sh  deploy.sh  dev.sh  setup.sh
src/: lib.rs
src/database/: index_db.rs  mod.rs
src/ui/: app.rs  mod.rs
