[package]
name = "reading_app_web"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cipher-rc5/reading_app_web"
description = "Web-based reading app using egui and IndexedDB"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared across wasm app code and local CLI helper binaries.
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }

# Native helper binaries (used by scripts/dev.sh and scripts/build.sh).
toml = "0.8.23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# egui/eframe web app stack.
chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.33.0"
indexed_db_futures = { version = "0.6.4", features = ["serde"] }
js-sys = "0.3.81"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"

# Browser/runtime integration.
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.81", features = ["Window", "Storage", "IdbFactory", "IdbObjectStore", "IdbTransaction", "IdbRequest", "IdbOpenDbRequest", "IdbVersionChangeEvent", "IdbCursorWithValue", "DomException"] }

[profile.release]
# Optimize for small wasm binaries and predictable release output.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Slight optimization keeps egui redraws responsive in development.
opt-level = 1
